--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,21 @@
 ---
+import Header from '../assets/sections/Header.astro';
+import Hero from '../assets/sections/Hero.astro';
+import Footer from '../assets/sections/Footer.astro';
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
-
 <Layout>
-	<Welcome />
-</Layout>
+	<div class="flex flex-col min-h-screen">
+	  <Header /> <!-- Header arriba -->
+	  
+	  <main class="flex-1 flex items-center justify-center">
+		<Hero /> <!-- Hero centrado verticalmente -->
+	  </main>
+  
+	  <Footer /> <!-- Footer abajo -->
+	</div>
+  </Layout>
