fixes: favicon, animations, overflow scroll

--- a/src/assets/sections/Header.astro
+++ b/src/assets/sections/Header.astro
@@ -3,7 +3,7 @@ import ButtonGroup from '../../components/ButtonGroup.astro';
 import Badge from '../../components/Badge.astro';
 
 ---
-<header class="sticky top-0 z-50 w-full py-4 sm:py-6 backdrop-blur-sm bg-[var(--color-background)]/80">
+<header class="animate-fade-in-down animate-delay-300 animate-duration-1000 sticky top-0 z-50 w-full py-4 sm:py-6 backdrop-blur-sm bg-[var(--color-background)]/80">
     <nav class="flex items-center justify-between max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
         {/* Contenido izquierda */}
         <div class="flex items-center">
