--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,12 +3,12 @@ import GradientOverlay from "../components/GradientOverlay.astro";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="es" class="overflow-y-scroll">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>Teresa Moles (Clinica Dental)</title>
+		<title>Clínica Dental</title>
 		
 	</head>
 	<body>
