trying to fix styles

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import GradientOverlay from "../components/GradientOverlay.astro";
+import '../styles/global.css';
+import GradientOverlay from "../components/GradientOverlay.astro";---
 ---
-
 <!doctype html>
 <html lang="es" class="overflow-y-scroll">
 	<head>
