favicon and footerlogo fixed

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,13 @@
 ---
 import '../styles/global.css';
-import GradientOverlay from "../components/GradientOverlay.astro";---
+import GradientOverlay from "../components/GradientOverlay.astro";
 ---
 <!doctype html>
 <html lang="es" class="overflow-y-scroll">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 		<title>Clínica Dental</title>
 		
 	</head>
