--- a/src/assets/sections/Footer.astro
+++ b/src/assets/sections/Footer.astro
@@ -16,7 +16,7 @@ import Badge from '../../components/Badge.astro';
       {/* Logo - centrado en móvil, izquierda en desktop */}
       <div class="flex items-center justify-center sm:justify-start w-full sm:w-1/3 order-1 sm:order-1">
         <img 
-          src="/logo_reduced.svg" 
+          src="logo_reduced.svg" 
           alt="Logo" 
           class="w-8 h-8"
           width="32"
