--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,9 +24,11 @@ import GradientOverlay from "../components/GradientOverlay.astro";
 	@theme {
 		--color-background: #fffcf4;
 		--color-foreground: #3b3b3b;
+    
 		--color-primary: #2f5d57;
 		--color-secondary: #ffc176;
-
+	
+    --color-border: #d9d9d9;
 		--color-footerGradient: #a5a5a5;
 
 	}
