--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -68,7 +68,7 @@ const content = text || children;  // Usa text si existe, sino children
   .badge--default {
     background-color: #f3f4f6;  /* Fondo gris claro */
     color: #374151;             /* Texto gris oscuro */
-    border-color: #374151;      /* Borde gris medio */
+    border-color: var(--color-border);      /* Borde gris medio */
   }
 
   
@@ -100,7 +100,7 @@ const content = text || children;  // Usa text si existe, sino children
   .badge--outline {
     background-color: transparent;  /* Fondo gris claro */
     color: var(--color-foreground);             /* Texto gris oscuro */
-    border-color: #374151;      /* Borde gris medio */       /* Borde gris claro */
+    border-color: var(--color-border);      /* Borde gris medio */       /* Borde gris claro */
   }
   
   /* Estilo ghost: sin fondo ni borde, texto tenue */
