first dialog added movile issues fixed

--- a/src/components/Input.astro
+++ b/src/components/Input.astro
@@ -27,7 +27,7 @@ const inputClasses = `bg-white  rounded-lg px-4 py-2 w-full shadow-sm focus:outl
   {label && (
     <label class="text-sm font-regular text-(--color-foreground) text-left">
       {label}
-      {required && <span class="text-(--color-secondary) justify-left">*</span>}
+      {required && <span class="text-(--color-secondary) ">*</span>}
     </label>
   )}
   <input
