gap and margin for dialog mobile fixed

--- a/src/assets/sections/Header.astro
+++ b/src/assets/sections/Header.astro
@@ -44,7 +44,7 @@ import Badge from '../../components/Badge.astro';
 
     <Dialog title="¿Quieres decirnos algo?" id="contact">
         <p>Utiliza este formulario para contactar con nosotros y te contestaremos lo antes posible.</p>
-        <form class="flex flex-col gap-4">
+        <form class="flex flex-col gap-3 sm:gap-4">
             <Input
                 label="Nombre"
                 placeholder="Tu nombre completo"
