--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ import GradientOverlay from "../components/GradientOverlay.astro";
 /* Definir Readex Pro */
 @font-face {
   font-family: 'Readex Pro';
-  src: url('fonts/ReadexPro-ExtraLight.ttf') format('truetype');
+  src: url('/fonts/ReadexPro-ExtraLight.ttf') format('truetype');
   font-weight: 200;
   font-style: normal;
   font-display: swap;
@@ -43,7 +43,7 @@ import GradientOverlay from "../components/GradientOverlay.astro";
 
 @font-face {
   font-family: 'Readex Pro';
-  src: url('fonts/ReadexPro-Light.ttf') format('truetype');
+  src: url('/fonts/ReadexPro-Light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -51,7 +51,7 @@ import GradientOverlay from "../components/GradientOverlay.astro";
 
 @font-face {
   font-family: 'Readex Pro';
-  src: url('fonts/ReadexPro-Regular.ttf') format('truetype');
+  src: url('/fonts/ReadexPro-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -59,7 +59,7 @@ import GradientOverlay from "../components/GradientOverlay.astro";
 
 @font-face {
   font-family: 'Readex Pro';
-  src: url('fonts/ReadexPro-Medium.ttf') format('truetype');
+  src: url('/fonts/ReadexPro-Medium.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -67,7 +67,7 @@ import GradientOverlay from "../components/GradientOverlay.astro";
 
 @font-face {
   font-family: 'Readex Pro';
-  src: url('fonts/ReadexPro-SemiBold.ttf') format('truetype');
+  src: url('/fonts/ReadexPro-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -75,7 +75,7 @@ import GradientOverlay from "../components/GradientOverlay.astro";
 
 @font-face {
   font-family: 'Readex Pro';
-  src: url('fonts/ReadexPro-Bold.ttf') format('truetype');
+  src: url('/fonts/ReadexPro-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
