--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -80,9 +80,10 @@ import GradientOverlay from "../components/GradientOverlay.astro";
   font-style: normal;
   font-display: swap;
 }
-	body {
-		background: var(--color-background);
-	}
+  body {
+    background: var(--color-background);
+    font-family: 'Readex Pro', sans-serif;
+  }
 
 	html,
 	body {
